@@ -1,34 +1,51 @@
+/*********************************************************************
+  This file is part of td4j, see <http://td4j.org/>
+
+  Copyright (C) 2010 Michael Rauch
+
+  td4j is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  td4j is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with td4j.  If not, see <http://www.gnu.org/licenses/>.
+*********************************************************************/
+
 package org.td4j.examples.tagger;
 
 import javax.persistence.EntityManager;
 import javax.persistence.EntityManagerFactory;
 
-import org.td4j.core.env.DefaultSvcRepository;
-import org.td4j.core.env.SvcRepo;
-import org.td4j.core.env.SvcRepository;
+import org.td4j.core.tk.env.SvcRepository;
+import org.td4j.swing.workbench.AppCtx;
 import org.td4j.swing.workbench.Workbench;
 
 public class AppLauncher {
 	
 	public static void main(String[] args) {
+		final SvcRepository svcRepo = new SvcRepository();
+		
 		final Setup setup = new Setup();
-		final Object initialNavigation = setup.run();		
+		final Object initialNavigation = setup.run(svcRepo);		
 		
-		// TODO inject svcRepo to workbench
-		System.out.println(setup.repo);
+		final AppCtx ctx = new AppCtx();
+		ctx.setSidebarEntries(TagGroup.class, Tag.class, Resource.class);
+		ctx.setSvcProvider(svcRepo);		
+		ctx.setInitialNavigation(initialNavigation);		
 		
-		Workbench.start(initialNavigation, TagGroup.class, Tag.class, Resource.class);
+		Workbench.start(ctx);
 	}
 	
 	
 	private static class Setup {
 		
-		private final SvcRepository repo = new DefaultSvcRepository();
-		
-		private Object run() {
-			
-			// TODO pass SvcRepo as parameter to Workbench
-			SvcRepo.init(repo);
+		private Object run(SvcRepository repo) {
 			
 			initCompanions(repo);
 			
